--- a/assets/scss/_menu-footer.scss
+++ b/assets/scss/_menu-footer.scss
@@ -1,5 +1,5 @@
 .receive-incentives{
-  background-image: url(/assets/images/bg-form.png);
+  background-image: url(../images/bg-form.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -51,7 +51,7 @@
       top: 46%;
       background-color: transparent;
       text-indent: -9999px;
-      background-image: url(/assets/images/ic-plane.svg);
+      background-image: url(../images/ic-plane.svg);
       height: 26px;
       width: 26px;
       white-space: nowrap;
@@ -75,7 +75,7 @@
     border-bottom:  1px solid #DFDFDF;
     padding-bottom: 21px;
     margin-bottom: 29px;
-    @include minWidth(768px){
+    @include minWidth(1200px){
       border-bottom:  0px solid #DFDFDF;
       padding-bottom: 0px;
       margin-bottom: 0px;
@@ -88,9 +88,12 @@
         display: flex;
         align-items: center;
         color: #404040;
-        font-size: 15px;
+        font-size: 13px;
         font-weight: 300;
         line-height: 35px;
+        @include minWidth(480px){
+          font-size: 15px;
+        }
         .icon{
           margin-right: 7px;
           display: flex;
@@ -133,7 +136,7 @@
     border-top: 1px solid #DFDFDF;
     padding-top: 34px;
     margin-top: 16px;
-    @include minWidth(768px){
+    @include minWidth(1200px){
       border-top: 0px solid #DFDFDF;
       padding-top: 0;
       margin-top: 0;
