--- a/assets/scss/_product-cateogory.scss
+++ b/assets/scss/_product-cateogory.scss
@@ -44,7 +44,7 @@
                 }
                 &::before{
                     content: '';
-                    background-image: url(/assets/images/leaf.svg);
+                    background-image: url(../images/leaf.svg);
                     width: 14px;
                     height: 14px;
                     background-size: contain;
