--- a/assets/scss/_product-cateogory.scss
+++ b/assets/scss/_product-cateogory.scss
@@ -32,7 +32,7 @@
         border-bottom: 1px solid #8DC540;
     }
     .list-cate-pr{
-        padding: 0 11px;
+        padding: 0 11px !important;
         li{
             a{
                 padding: 11px 0;
@@ -101,6 +101,66 @@
         @include minWidth(768px){
             padding: 30px 65px;
         }
+        .woocommerce-ordering{
+            align-items: center;
+            p{
+                &:first-child{
+                    margin-right: 6px;
+                }
+            }
+            br{
+                display: none;
+            }
+        }
+        .button-box{
+            position: relative;
+            width: 101px;
+            height: 39px;
+            margin-right: 6px;
+            margin-bottom: 10px;
+            input{
+                z-index: 1000;
+                opacity: 0.01;
+                display: block;
+                cursor: pointer;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+            input[type="radio"]{
+                &:checked{
+                    &+label{
+                        background-color: #8DC540;
+                        border: 1px solid #8DC540;
+                        color: $light;
+                    }
+                }
+            }
+            .Checked{
+                &+label{
+                    background-color: #8DC540;
+                    border: 1px solid #8DC540;
+                }
+            }
+            label{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 5px;
+                margin-bottom: 0;
+                border: 1px solid #DBDBDB;
+                background: #FFF; 
+                transition: all 0.3s;
+                z-index: 99;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+        }
         button{
             width: 101px;
             height: 39px;
@@ -144,7 +204,7 @@
                 position: absolute;
                 right: 20px;
                 background: $light;
-                top: 50%;
+                top: 43%;
                 transform: translateY(-50%);
             }
         }
@@ -157,6 +217,10 @@
             border-radius: 5px;
             padding: 0 22px;
             outline: none;
+            text-overflow: ellipsis;
+            overflow: hidden !important;
+            margin-bottom: 10px;
+            cursor: pointer;
         }
     }
 }
@@ -172,9 +236,12 @@
         }
     }
     @include minWidth(768px){
-        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-columns: repeat(3, minmax(0, 1fr));
         column-gap:30px;
         margin-bottom: 0;
+    }
+    @include minWidth(1500px){
+        grid-template-columns: repeat(4, minmax(0, 1fr));
     }
 }
 .after-loop-wrapper{
