--- a/assets/scss/_detail-product.scss
+++ b/assets/scss/_detail-product.scss
@@ -282,11 +282,13 @@
         right: -19px;
     }
 }
+.rank-and-review{
+    margin-bottom: 63px;
+}
 .content-rank-and-view{
     border-radius: 20px;
     background: #FFF;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.07);
-    overflow: hidden;
     padding: 39px 58px;
     h5{
         border-radius: 5px;
@@ -297,6 +299,139 @@
         text-align: justify;
         font-size: 20px;
         font-weight: 600;
-        line-height: 30px; /* 150% */
+        line-height: 30px;
+        margin-bottom: 12px;
+    }
+}
+.progress-wrap{
+    display: flex;
+    align-items: center;
+    .percent{
+        font-size: 12px;
+        color: #212121;
+    }
+}
+.h-review-progress{
+    width: 138px;
+    height: 12px;
+    position: relative;
+    .bg{
+        background: #eff0f5;
+    }
+    .bar{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .fg{
+        background: #faca51;
+    }
+}
+.box-average{
+    padding-bottom: 24px;
+    .summary-h{
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 50px;
+        .score-average-h{
+            font-size: 48px;
+            color: #212121;
+        }
+        .score-max-h{
+            font-size: 32px;
+            color: #9e9e9e;
+            text-align: center;
+            line-height: 40px;
+        }
+        .star-container{
+            margin-bottom: 5px;
+            .icon{
+                padding-right: 4px;
+                svg{
+                    width: 33px;
+                    height: 33px;
+                }
+            }
+        }
+    }
+    .detail{
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .detail{
+        li{
+            display: flex;
+            align-items: center;
+            &:not(:last-child){
+                margin-bottom: 8px;
+            }
+            .icon{
+                margin-right: 3px;
+            }
+        }
+    }
+    .h-review-progress{
+        margin: 0 15px;
+    }
+}
+.icon{
+    svg{
+        path{
+            fill: #d7d7d7;
+        }
+    }
+    &.star-yellow{
+        svg{
+            path{
+                fill: #ffbf00;
+            }
+        }
+    }
+}
+.star-container{
+    display: flex;
+}
+.filter-sort{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #eff0f5;
+    border-bottom: 1px solid #eff0f5;
+    .title{
+        padding: 15px 0px;
+    }
+}
+.list-filter-sort{
+    display: flex;
+    align-items: center;
+    li{
+        display: flex;
+        align-items: center;
+        border-left: 1px solid #eff0f5;
+        padding: 15px 25px;
+        p{
+            margin-bottom: 0;
+            font-weight: 300;
+            margin-right: 3px;
+        }
+        svg{
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+            fill: #757575;
+        }
+        .dropdown{
+            margin-top: 1px;
+            button{
+                width: max-content;
+                height: max-content;
+                font-weight: 400;
+                padding: 0 2px;
+                &::after{
+                    border: none;
+                }
+            }
+        }
     }
 }
